# inf-942-projeto-final

./: .gitignore  README.md  main.ipynb  pyproject.toml  requirements.txt  system.py
