[tool.poetry]
name = "trabalho"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
torch = "^1.12.0"
torchvision = "^0.13.0"
tensorboard = "^2.9.1"
scikit-learn = "^1.1.1"
jupyter = "^1.0.0"
matplotlib = "^3.5.2"
tqdm = "^4.64.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
